--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 后台 api 服务地址
-VUE_APP_BASE_API_URL=https://reapi.coune.online
+VUE_APP_BASE_API_URL=https://mentapi.coune.online
 
 # 访客统计 id （默认不开启，设置值后展示）
 VUE_APP_VISITOR_BADGE_ID=
